code cleanup and refactoring of EditDetectorModelDialog
- remove use of Optional for malcolmModelEditor
- call method displayValidationResult in async context
- fix whitespace and split long lines
- extract out doLoadSnapshot and doUpdatePlot methods for readability

Change-Id: If659059e3d3d35844e3b840b5c89bbd931c9aba6